fix: circle left-aligned; add pLog to debug onEnd trigger v2.1.146

--- a/src/styles/player/message.css
+++ b/src/styles/player/message.css
@@ -11,7 +11,7 @@
 }
 
 .playerMsgRowCircle {
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .playerMsgBubble {
